--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         rel="stylesheet">
 
-    <title>Aluraflix</title>
+    <title>Guiminamflix</title>
 
 </head>
 
@@ -24,7 +24,7 @@
 
 <body>
 
-    <header>ALURAFLIX</header>
+    <header>GUIMINAMFLIX</header>
 
 
 
